# polymarket-insider-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  categories.py  classifier.py  main.py  models.py  polymarket.py  service.py  settings.py  storage.py  summary.py  telegram.py
tests/: test_categories.py  test_classifier.py  test_formatting.py  test_service.py
