[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-wallet-tracker"
version = "0.1.0"
description = "Polymarket suspicious wallet tracker with Telegram alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "data*", "*.egg-info*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
